tests/parsing/smtlib/v2.6/errors/007_attribute_missing_term.expected
File "tests/parsing/smtlib/v2.6/errors/007_attribute_missing_term.smt2", line 2, character 11-12:
2 | (assert (! _))
               ^
Error while parsing a term with attribute, read the reserved word '_',
      but expected a term..
